# AmaliTech_Training_1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
amalitech_training/clean_code_testing_and_git/: __init__.py
amalitech_training/clean_code_testing_and_git/LAB_1/: exceptions.py  importer.py  main.py  models.py  parser.py  repository.py  test_auth.py  test_lab1.py  validator.py
amalitech_training/clean_code_testing_and_git/LAB_3/: README.md  __init__.py  exceptions.py  interfaces.py  models.py  password_hasher.py  repositories.py  test_lab3.py  user_service.py
amalitech_training/python_advanced/: __init__.py  analytics.py  decorators.py  generators.py  log_parser.py  main.py  regex_patterns.py  test_lab2.py
amalitech_training/python_advanced/LAB_2/: README.md  analytics.py  test_lab2.py
amalitech_training/python_advanced/LAB_5/: async_decorators.py  extractor.py  fetcher.py  main.py  performance.py  storage.py  test_lab5.py
amalitech_training/python_basics/LAB_1/: README.md  main.py  test_lab1.py
amalitech_training/python_basics/LAB_1/courses/: course_registry.py  courses_info.py
amalitech_training/python_basics/LAB_1/enrollment/: enroll.py  enrollment_registry.py
amalitech_training/python_basics/LAB_1/students/: student_info.py  student_registry.py
amalitech_training/python_basics/LAB_2/: README.md  main.py  test_lab2.py
amalitech_training/python_basics/LAB_2/contract/: contract.py  contract_registry.py
amalitech_training/python_basics/LAB_2/employee/: employee.py  employee_registry.py
amalitech_training/python_basics/LAB_3/: README.md  main.py  test_lab3.py
amalitech_training/python_basics/LAB_3/models/: author.py  book.py  borrow.py
amalitech_training/python_basics/LAB_4/: README.md  main.py  rental_service.py  test_lab4.py  vehicle.py
amalitech_training/python_basics/LAB_5/: README.md  account.py  main.py  test_lab5.py  transaction.py
