[project]
name = "amalitech-training-1"
version = "0.1.0"
description = ""
authors = [
    {name = "sjamillah",email = "j.ssozi@alustudent.com"}
]
requires-python = ">=3.10"
dependencies = [
    "bcrypt (>=5.0.0,<6.0.0)"
]

packages = [
    { include = "amalitech_training" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["amalitech_training"]
addopts = "--cov=amalitech_training --cov-report=term-missing --cov-branch"

[tool.coverage.run]
branch = true
source = ["amalitech_training"]
omit = [
    "amalitech_training/**/test_*.py",
    "amalitech_training/**/main.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
