[project]
name = "amalitech-training-1"
version = "0.1.0"
description = ""
authors = [
    {name = "sjamillah",email = "j.ssozi@alustudent.com"}
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.13.5,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]

packages = [
    { include = "amalitech_training" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
]

[tool.pytest.ini_options]
pythonpath = ["."]
